Adjusts the build.gradle for the main app and system tests to allow for easily setting the target jdk.
Refs #81873